# rust

./: README.md
tpe1/lista01/: Cargo.toml
tpe1/lista01/src/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs
tpe1/lista02/: Cargo.toml
tpe1/lista02/src/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  main.rs
